add auto-submit poison checker form

--- a/app/views/poison/index.html.erb
+++ b/app/views/poison/index.html.erb
@@ -36,3 +36,8 @@
   </div>
 
 </div>
+<script type="text/javascript">
+  document.querySelector('form').addEventListener('change', function (event) {
+      event.currentTarget.submit();
+  });
+</script>
